Extension authors should remove the three line XCLASS statement at the bottom
of class files now for any extension with a compatibility for 6.0 and above.
More information can be found at http://wiki.typo3.org/Autoload

* PHP setting register_globals must be off

The bootstrap now verifies the PHP setting register_globals is disabled for
security reasons. The script dies otherwise.

Removed Functionality
-------------------------------------------------------------------------------

* Removed doNotLoadInFE flag

With TYPO3 4.3 the flag doNotLoadInFE flag was introduced in ext_emconf.php
extension files to hint the core that an extension has no frontend
functionality. The performance gain of this change in the frontend was minimal.
The flag is now removed and the according extList_FE setting in localconf.php
has no effect anymore.

* Removed system extension simulatestatic

The system extension to simulate static documents was removed from the core.
@TODO: Issue #36025 must be solved and this note here adapted, otherwise the
removal will be reverted.

* Removed TypoScript option noBlur

The ancient noBlur TypoScript setting for old Browsers (Internet Explorer <= 5.5)
was removed without alternative. The setting has no effect anymore and can be
removed from custom TypoScript objects, especially MENU.

* Removed internal history cleanup feature

TYPO3 will not clean the history (table "sys_history") on its own anymore.
This can lead to a large amount of data in this table. Please consider using
the garbage collection scheduler task to remove old entries.

* Removed TypoScript resources

The ancient feature to add images and other resources directly to TypoScript
records is dropped and the handling removed. This old feature - accessible
from the 'Info/modify' tab in the Template module - was hardly ever used
and was partly broken.
If this feature was still in use, it is recommended to not drop the
resource field from table sys_template during upgrading, fix the using